<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:layout_marginBottom="@dimen/space_xs"
        android:text="@string/items_settings_section_title"
        android:textAppearance="@style/Text.SectionHeader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_xl"
        android:paddingVertical="@dimen/space_m">

        <TextView
            android:id="@+id/items_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items_settings_status_empty"
            android:textAppearance="@style/Text.BodyBold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/items_settings_description"
            android:textAppearance="@style/Text.Body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:orientation="horizontal">

            <Button
                android:id="@+id/import_items_button"
                style="@style/Widget.Button.Secondary.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_s"
                android:layout_weight="1"
                android:text="@string/items_settings_import_csv" />

            <Button
                android:id="@+id/add_items_button"
                style="@style/Widget.Button.Secondary.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_s"
                android:layout_weight="1"
                android:text="@string/items_settings_manage" />

        </LinearLayout>

        <!-- Export CSV Button -->
        <Button
            android:id="@+id/export_items_button"
            style="@style/Widget.Button.Secondary.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/items_settings_export_csv" />

        <TextView
            android:id="@+id/clear_items_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_l"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/space_s"
            android:text="@string/items_settings_clear_all"
            android:textAppearance="@style/Text.Link"
            android:textColor="@color/color_warning_red" />

    </LinearLayout>

</LinearLayout>
