<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_screen_horizontal">

    <!-- Lightning Address Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_m"
        android:text="@string/withdraw_address_card_title"
        style="@style/Text.RowTitle" />

    <!-- Address Input -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Numo.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:fontFamily="sans-serif"
            android:hint="@string/withdraw_lightning_address_hint_value"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_tertiary"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Amount Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_screen_horizontal"
        android:layout_marginBottom="@dimen/space_m"
        android:text="@string/withdraw_lightning_amount_label"
        style="@style/Text.RowTitle" />

    <!-- Amount Input -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Numo.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:fontFamily="sans-serif"
            android:hint="@string/withdraw_amount_placeholder"
            android:inputType="number"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_tertiary"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Continue Button -->
    <Button
        android:id="@+id/continue_button"
        style="@style/Widget.Button.Primary.Green"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_l"
        android:enabled="false"
        android:text="@string/withdraw_continue_button"
        android:textAllCaps="false"
        android:textSize="17sp" />

</LinearLayout>
