<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_white">

    <!-- Top App Bar -->
    <com.electricdreams.numo.ui.components.NumoTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        app:topBarTitle="@string/developer_error_logs_title"
        app:topBarNavIcon="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Section Header -->
    <TextView
        android:id="@+id/section_header"
        style="@style/Text.SectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_xl"
        android:text="@string/developer_error_logs_section_title"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <!-- Date Filter Row -->
    <LinearLayout
        android:id="@+id/date_filter_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_s"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_header">

        <TextView
            android:id="@+id/date_filter_label"
            style="@style/Text.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_error_logs_filter_label" />

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/date_filter_value"
            style="@style/Text.BodyBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/developer_error_logs_filter_today" />

        <ImageView
            android:importantForAccessibility="no"
            android:id="@+id/date_filter_button"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:src="@drawable/ic_chevron_forward"
            app:tint="@color/color_icon_secondary" />
    </LinearLayout>

    <!-- RecyclerView for log entries -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/error_logs_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_s"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_l"
        app:layout_constraintTop_toBottomOf="@id/date_filter_row"
        app:layout_constraintBottom_toTopOf="@id/action_bar" />

    <!-- Empty View -->
    <TextView
        android:id="@+id/empty_view"
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_error_logs_empty"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/date_filter_row"
        app:layout_constraintBottom_toTopOf="@id/action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Action Bar -->
    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_l"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/copy_all_button"
            style="@style/Widget.Button.Secondary.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/developer_error_logs_copy_all" />

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/share_button"
            style="@style/Widget.Button.Primary.Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/developer_error_logs_share" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
